--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 CFLAGS = -Wall -Wextra -g
 LDFLAGS = 
 
-prog: main.c abr.c
+prog: main.c abr.c ./piles_files/pile.c
 	$(CC) $(CFLAGS) -o $@ $^
 
 clean:
